--- a/index.html
+++ b/index.html
@@ -5,60 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+      <link rel="stylesheet" href="./css/styles.css">
+       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+
+      <link rel="stylesheet" href="">
   </head>
-  <body>
+  <body class="page">
     <!-- Шапка сайта -->
     <header>
-      <a href="/index.html">WebStudio</a>
+      <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
       <nav>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link">Студія</a></li>
+          <li><a href="" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
+          <a href="tel:+38(096)111-11-11" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <!-- Герой -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
 
       <!-- Преимущества -->
-      <section>
-        <h2>Наші переваги</h2>
-        <ul>
+      <section class="feature">
+        <h2 class="feature-title">Наші переваги</h2>
+        <ul class="feature list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="feature-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="feature-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="feature-subtitle">ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="feature-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -68,9 +73,9 @@
       </section>
 
       <!-- Чим ми займаємося -->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="work list">
           <li><img src="./img/work1.jpg" alt="Лептоп" width="370" /></li>
           <li><img src="./img/work2.jpg" alt="Сматрфон" width="370" /></li>
           <li><img src="./img/work3.jpg" alt="Планшет" width="370" /></li>
@@ -78,27 +83,27 @@
       </section>
 
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team list">
+          <li >
             <img src="./img/member1.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="team-subtitle">Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./img/member2.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="team-subtitle">Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./img/member3.jpg" alt="Микола Тарасов" width="270" />
-            <h3>Микола Тарасов</h3>
+            <h3 class="team-subtitle">Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./img/member4.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-subtitle">Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
