--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul class="site-nav list">
           <li><a href="" class="link">Студія</a></li>
-          <li><a href="" class="link">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
