--- a/portfolio.html
+++ b/portfolio.html
@@ -1,51 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    </head>
- <body class="page">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="page">
     <!-- Шапка сайта -->
     <header>
-        <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
-        <nav>
-            <ul class="site-nav list">
-                <li><a href="" class="link">Студія</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
-            </ul>
-        </nav>
-        <ul class="contacts-nav list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+38(096)111-11-11" class="link">+38 096 111 11 11</a>
-            </li>
+      <a class="logo" href="/index.html"
+        >Web<span class="logo-header">Studio</span></a
+      >
+      <nav>
+        <ul class="site-nav list">
+          <li><a href="" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
+      </nav>
+      <ul class="contacts-nav list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+38(096)111-11-11" class="link">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
 
     <!-- Контекнт -->
     <main>
-        <h2>Content</h2>
+      <h1>Портфолио</h1>
+      <!-- Фильтр -->
+      <ul class="filter list">
+        <li><button type="button">Усі</button></li>
+        <li><button type="button">Веб-сайти</button></li>
+        <li><button type="button">Додатки</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+      </ul>
+
+      <!-- Портфолио -->
+      <ul class="portfolio list">
+        <li>
+          <img src="./img/portfolio1.jpg" alt="" width="370px" />
+          <h2>Технокряк</h2>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <img src="./img/portfolio2.jpg" alt="" width="370px" />
+          <h2>Постер New Orlean vs Golden Star</h2>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <img src="./img/portfolio3.jpg" alt="" width="370px" />
+          <h2>Ресторан Seafood</h2>
+          <p>Додаток</p>
+        </li>
+        <li>
+          <img src="./img/portfolio4.jpg" alt="" width="370px" />
+          <h2>Проєкт Prime</h2>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <img src="./img/portfolio5.jpg" alt="" width="370px" />
+          <h2>Проєкт Boxes</h2>
+          <p>Додаток</p>
+        </li>
+        <li>
+          <img src="./img/portfolio16.jpg" alt="" width="370px" />
+          <h2>Inspiration has no Borders</h2>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <img src="./img/portfolio7.jpg" alt="" width="370px" />
+          <h2>Видання Limited Edition</h2>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <img src="./img/portfolio8.jpg" alt="" width="370px" />
+          <h2>Проєкт LAB</h2>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <img src="./img/portfolio9.jpg" alt="" width="370px" />
+          <h2>Growing Business</h2>
+          <p>Додаток</p>
+        </li>
+      </ul>
     </main>
 
     <!-- Футер -->
     <footer>
-        <a href="/index.html">WebStudio</a>
-        <address>
-            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
-                target="_blank" rel="noopener noreferrer">
-                м. Київ, пр-т Лесі Українки, 26</a>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
-        </address>
+      <a href="/index.html">WebStudio</a>
+      <address>
+        <a
+          href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          м. Київ, пр-т Лесі Українки, 26</a
+        >
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
+      </address>
     </footer>
-
- </body>
+  </body>
 </html>
