--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
-      <link rel="stylesheet" href="./css/styles.css">
-       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-
-      <link rel="stylesheet" href="">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="page">
+  <body>
     <!-- Шапка сайта -->
     <header>
-      <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
+      <a class="logo" href="/index.html"
+        >Web<span class="logo-header">Studio</span></a
+      >
       <nav>
         <ul class="site-nav list">
           <li><a href="" class="link">Студія</a></li>
@@ -24,7 +26,9 @@
       </nav>
       <ul class="contacts-nav list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
           <a href="tel:+38(096)111-11-11" class="link">+38 096 111 11 11</a>
@@ -34,14 +38,15 @@
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
+        <h1 class="hero-title">Ефективні рішення для <br>
+          вашого бізнесу</h1>
+        <button type="button" class="button primary">Замовити послугу</button>
       </section>
 
       <!-- Преимущества -->
-      <section class="feature">
-        <h2 class="feature-title">Наші переваги</h2>
-        <ul class="feature list">
+      <section class="section">
+        <h2 class="section-title">Наші переваги</h2>
+        <ul class="feature-list list">
           <li>
             <h3 class="feature-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
@@ -73,9 +78,9 @@
       </section>
 
       <!-- Чим ми займаємося -->
-      <section class="work">
-        <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="work list">
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul class="work-list list">
           <li><img src="./img/work1.jpg" alt="Лептоп" width="370" /></li>
           <li><img src="./img/work2.jpg" alt="Сматрфон" width="370" /></li>
           <li><img src="./img/work3.jpg" alt="Планшет" width="370" /></li>
@@ -83,28 +88,28 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team list">
-          <li >
+      <section class="section-team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li>
             <img src="./img/member1.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3 class="team-subtitle">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./img/member2.jpg" alt="Ольга Рєпіна" width="270" />
             <h3 class="team-subtitle">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./img/member3.jpg" alt="Микола Тарасов" width="270" />
             <h3 class="team-subtitle">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./img/member4.jpg" alt="Михайло Єрмаков" width="270" />
             <h3 class="team-subtitle">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
