--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,11 @@
       <h1>Портфолио</h1>
       <!-- Фильтр -->
       <ul class="filter list">
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+        <li><button type="button" class="button secondary">Усі</button></li>
+        <li><button type="button" class="button secondary">Веб-сайти</button></li>
+        <li><button type="button" class="button secondary">Додатки</button></li>
+        <li><button type="button" class="button secondary">Дизайн</button></li>
+        <li><button type="button" class="button secondary">Маркетинг</button></li>
       </ul>
 
       <!-- Портфолио -->
