--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header">
       <a class="logo" href="/index.html"
-        >Web<span class="logo-header">Studio</span></a
+        >Web<span class="header-logo">Studio</span></a
       >
       <nav>
         <ul class="site-nav list">
@@ -117,7 +117,8 @@
 
     <!-- Футер -->
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a class="logo" href="/index.html">
+        Web<span class="footer-logo">Studio</span></a>
       <address>
         <a
           href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
