--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Шапка сайта -->
-    <header">
+    <!-- Header -->
+    <header>
       <a class="logo" href="/index.html"
         >Web<span class="header-logo">Studio</span></a
       >
@@ -36,14 +36,14 @@
       </ul>
     </header>
     <main>
-      <!-- Герой -->
+      <!-- Hero -->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для <br>
           вашого бізнесу</h1>
         <button type="button" class="button primary">Замовити послугу</button>
       </section>
 
-      <!-- Преимущества -->
+      <!-- Feature -->
       <section class="section">
         <h2 class="section-title">Наші переваги</h2>
         <ul class="feature-list list">
@@ -87,7 +87,7 @@
         </ul>
       </section>
 
-      <!-- Наша команда -->
+      <!-- Team -->
       <section class="section-team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
@@ -115,21 +115,21 @@
       </section>
     </main>
 
-    <!-- Футер -->
-    <footer>
-      <a class="logo" href="/index.html">
-        Web<span class="footer-logo">Studio</span></a>
-      <address>
-        <a
-          href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          м. Київ, пр-т Лесі Українки, 26</a
-        >
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
-      </address>
+    <!-- Footer -->
+    <footer class="page-footer">
+        <a class="logo" href="/index.html">
+          Web<span class="footer-logo">Studio</span></a>
+        <address>
+          <a class="location-footer"
+            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            м. Київ, пр-т Лесі Українки, 26</a
+          >
+          <a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-footer" href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
+        </address>
     </footer>
   </body>
 </html>
