--- a/portfolio.html
+++ b/portfolio.html
@@ -98,19 +98,17 @@
       </ul>
     </main>
 
-    <!-- Футер -->
-    <footer>
-      <a href="/index.html">WebStudio</a>
+    <!-- Footer -->
+    <footer class="page-footer">
+      <a class="logo" href="/index.html">
+        Web<span class="footer-logo">Studio</span></a>
       <address>
-        <a
+        <a class="location-footer"
           href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          м. Київ, пр-т Лесі Українки, 26</a
-        >
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
+          target="_blank" rel="noopener noreferrer">
+          м. Київ, пр-т Лесі Українки, 26</a>
+        <a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="contact-footer" href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
