--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,12 @@
     />
   </head>
   <body class="page">
-    <!-- Шапка сайта -->
+    <!-- Header -->
     <header>
-      <a class="logo" href="/index.html"
-        >Web<span class="logo-header">Studio</span></a
-      >
+      <a class="logo" href="/index.html">Web<span class="header-logo">Studio</span></a>
       <nav>
         <ul class="site-nav list">
-          <li><a href="" class="link">Студія</a></li>
+          <li><a href="./index.html" class="link">Студія</a></li>
           <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
@@ -35,67 +33,67 @@
         </li>
       </ul>
     </header>
-
-    <!-- Контекнт -->
     <main>
-      <h1>Портфолио</h1>
-      <!-- Фильтр -->
-      <ul class="filter list">
-        <li><button type="button" class="button secondary">Усі</button></li>
-        <li><button type="button" class="button secondary">Веб-сайти</button></li>
-        <li><button type="button" class="button secondary">Додатки</button></li>
-        <li><button type="button" class="button secondary">Дизайн</button></li>
-        <li><button type="button" class="button secondary">Маркетинг</button></li>
-      </ul>
+      <section class="portfolio-section">
+        <h1>Портфолио</h1>
+        <!-- Filter -->
+        <ul class="filter list">
+          <li><button type="button" class="button secondary">Усі</button></li>
+          <li><button type="button" class="button secondary">Веб-сайти</button></li>
+          <li><button type="button" class="button secondary">Додатки</button></li>
+          <li><button type="button" class="button secondary">Дизайн</button></li>
+          <li><button type="button" class="button secondary">Маркетинг</button></li>
+        </ul>
 
-      <!-- Портфолио -->
-      <ul class="portfolio list">
-        <li>
-          <img src="./img/portfolio1.jpg" alt="" width="370px" />
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./img/portfolio2.jpg" alt="" width="370px" />
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./img/portfolio3.jpg" alt="" width="370px" />
-          <h2>Ресторан Seafood</h2>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <img src="./img/portfolio4.jpg" alt="" width="370px" />
-          <h2>Проєкт Prime</h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./img/portfolio5.jpg" alt="" width="370px" />
-          <h2>Проєкт Boxes</h2>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <img src="./img/portfolio16.jpg" alt="" width="370px" />
-          <h2>Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./img/portfolio7.jpg" alt="" width="370px" />
-          <h2>Видання Limited Edition</h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./img/portfolio8.jpg" alt="" width="370px" />
-          <h2>Проєкт LAB</h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./img/portfolio9.jpg" alt="" width="370px" />
-          <h2>Growing Business</h2>
-          <p>Додаток</p>
-        </li>
-      </ul>
+        <!-- Portfolio -->
+        <ul class="portfolio-list list">
+          <li>
+            <img src="./img/portfolio1.jpg" alt="Открытый ноутбук" width="370px" />
+            <h2 class="portfolio-subtitle">Технокряк</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./img/portfolio2.jpg" alt="Два баскетболиста борются за мяч" width="370px" />
+            <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li>
+            <img src="./img/portfolio3.jpg" alt="Логотип ресторана Seafood" width="370px" />
+            <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
+            <p class="text">Додаток</p>
+          </li>
+          <li>
+            <img src="./img/portfolio4.jpg" alt="Наушники" width="370px" />
+            <h2 class="portfolio-subtitle">Проєкт Prime</h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./img/portfolio5.jpg" alt="Белая большая и коричневая малая коробки" width="370px" />
+            <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
+            <p class="text">Додаток</p>
+          </li>
+          <li>
+            <img src="./img/portfolio6.jpg" alt="Монитор Apple" width="370px" />
+            <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./img/portfolio7.jpg" alt="Открытый журнал" width="370px" />
+            <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li>
+            <img src="./img/portfolio8.jpg" alt="Бирка с логотипом проекта LAB" width="370px" />
+            <h2 class="portfolio-subtitle">Проєкт LAB</h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./img/portfolio9.jpg" alt="Человек печатает на ноутбуке" width="370px" />
+            <h2 class="portfolio-subtitle">Growing Business</h2>
+            <p class="text">Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- Footer -->
