Исправил ссылку на логотипе

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <body class="page">
     <!-- Header -->
     <header>
-      <a class="logo" href="/index.html">Web<span class="header-logo">Studio</span></a>
+      <a class="logo" href="./index.html">Web<span class="header-logo">Studio</span></a>
       <nav>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
