--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Header -->
     <header>
-      <a class="logo" href="/index.html"
+      <a class="logo" href="./index.html"
         >Web<span class="header-logo">Studio</span></a
       >
       <nav>
