Изменил ссылку в логотипе в футере

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
 
     <!-- Footer -->
     <footer class="page-footer">
-      <a class="logo" href="/index.html">
+      <a class="logo" href="./index.html">
         Web<span class="footer-logo">Studio</span></a>
       <address>
         <a class="location-footer"
