--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,9 @@
   <body class="page">
     <!-- Header -->
     <header>
-      <a class="logo" href="./index.html">Web<span class="header-logo">Studio</span></a>
+      <a class="logo" href="./index.html"
+        >Web<span class="header-logo">Studio</span></a
+      >
       <nav>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
@@ -39,56 +41,88 @@
         <!-- Filter -->
         <ul class="filter list">
           <li><button type="button" class="button secondary">Усі</button></li>
-          <li><button type="button" class="button secondary">Веб-сайти</button></li>
-          <li><button type="button" class="button secondary">Додатки</button></li>
-          <li><button type="button" class="button secondary">Дизайн</button></li>
-          <li><button type="button" class="button secondary">Маркетинг</button></li>
+          <li>
+            <button type="button" class="button secondary">Веб-сайти</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Додатки</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Маркетинг</button>
+          </li>
         </ul>
 
         <!-- Portfolio -->
         <ul class="portfolio-list list">
           <li>
-            <img src="./img/portfolio1.jpg" alt="Открытый ноутбук" width="370px" />
+            <img
+              src="./img/portfolio1.jpg"
+              alt="Открытый ноутбук"
+              width="370"
+            />
             <h2 class="portfolio-subtitle">Технокряк</h2>
             <p class="text">Веб-сайт</p>
           </li>
           <li>
-            <img src="./img/portfolio2.jpg" alt="Два баскетболиста борются за мяч" width="370px" />
+            <img
+              src="./img/portfolio2.jpg"
+              alt="Два баскетболиста борются за мяч"
+              width="370"
+            />
             <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
             <p class="text">Дизайн</p>
           </li>
           <li>
-            <img src="./img/portfolio3.jpg" alt="Логотип ресторана Seafood" width="370px" />
+            <img
+              src="./img/portfolio3.jpg"
+              alt="Логотип ресторана Seafood"
+              width="370"
+            />
             <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
             <p class="text">Додаток</p>
           </li>
           <li>
-            <img src="./img/portfolio4.jpg" alt="Наушники" width="370px" />
+            <img src="./img/portfolio4.jpg" alt="Наушники" width="370" />
             <h2 class="portfolio-subtitle">Проєкт Prime</h2>
             <p class="text">Маркетинг</p>
           </li>
           <li>
-            <img src="./img/portfolio5.jpg" alt="Белая большая и коричневая малая коробки" width="370px" />
+            <img
+              src="./img/portfolio5.jpg"
+              alt="Белая большая и коричневая малая коробки"
+              width="370"
+            />
             <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
             <p class="text">Додаток</p>
           </li>
           <li>
-            <img src="./img/portfolio6.jpg" alt="Монитор Apple" width="370px" />
+            <img src="./img/portfolio6.jpg" alt="Монитор Apple" width="370" />
             <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
             <p class="text">Веб-сайт</p>
           </li>
           <li>
-            <img src="./img/portfolio7.jpg" alt="Открытый журнал" width="370px" />
+            <img src="./img/portfolio7.jpg" alt="Открытый журнал" width="370" />
             <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
             <p class="text">Дизайн</p>
           </li>
           <li>
-            <img src="./img/portfolio8.jpg" alt="Бирка с логотипом проекта LAB" width="370px" />
+            <img
+              src="./img/portfolio8.jpg"
+              alt="Бирка с логотипом проекта LAB"
+              width="370"
+            />
             <h2 class="portfolio-subtitle">Проєкт LAB</h2>
             <p class="text">Маркетинг</p>
           </li>
           <li>
-            <img src="./img/portfolio9.jpg" alt="Человек печатает на ноутбуке" width="370px" />
+            <img
+              src="./img/portfolio9.jpg"
+              alt="Человек печатает на ноутбуке"
+              width="370"
+            />
             <h2 class="portfolio-subtitle">Growing Business</h2>
             <p class="text">Додаток</p>
           </li>
@@ -99,14 +133,23 @@
     <!-- Footer -->
     <footer class="page-footer">
       <a class="logo" href="./index.html">
-        Web<span class="footer-logo">Studio</span></a>
+        Web<span class="footer-logo">Studio</span></a
+      >
       <address>
-        <a class="location-footer"
+        <a
+          class="location-footer"
           href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0?sa=X&ved=2ahUKEwiA3O_IqY_7AhVwl4sKHR75A3gQ8gF6BAgYEAE"
-          target="_blank" rel="noopener noreferrer">
-          м. Київ, пр-т Лесі Українки, 26</a>
-        <a class="contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="contact-footer" href="tel:+38(096)111-11-11">+38 096 111 11 11</a>
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          м. Київ, пр-т Лесі Українки, 26</a
+        >
+        <a class="contact-footer" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact-footer" href="tel:+38(096)111-11-11"
+          >+38 096 111 11 11</a
+        >
       </address>
     </footer>
   </body>
