Сделал ссылки на странице Портфолио в примерах работ

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
         </li>
       </ul>
     </header>
+    <!-- Content -->
     <main>
       <section class="portfolio-section">
         <h1>Портфолио</h1>
@@ -58,73 +59,101 @@
         <!-- Portfolio -->
         <ul class="portfolio-list list">
           <li>
-            <img
-              src="./img/portfolio1.jpg"
-              alt="Открытый ноутбук"
-              width="370"
-            />
-            <h2 class="portfolio-subtitle">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio1.jpg"
+                alt="Открытый ноутбук"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio2.jpg"
-              alt="Два баскетболиста борются за мяч"
-              width="370"
-            />
-            <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
-            <p class="text">Дизайн</p>
+            <a href="" class="link">
+              <img
+                src="./img/portfolio2.jpg"
+                alt="Два баскетболиста борются за мяч"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">
+                Постер New Orlean vs Golden Star
+              </h2>
+              <p class="text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio3.jpg"
-              alt="Логотип ресторана Seafood"
-              width="370"
-            />
-            <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
-            <p class="text">Додаток</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio3.jpg"
+                alt="Логотип ресторана Seafood"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
+              <p class="text">Додаток</p></a
+            >
           </li>
           <li>
-            <img src="./img/portfolio4.jpg" alt="Наушники" width="370" />
-            <h2 class="portfolio-subtitle">Проєкт Prime</h2>
-            <p class="text">Маркетинг</p>
+            <a href="" class="link"
+              ><img src="./img/portfolio4.jpg" alt="Наушники" width="370" />
+              <h2 class="portfolio-subtitle">Проєкт Prime</h2>
+              <p class="text">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img
-              src="./img/portfolio5.jpg"
-              alt="Белая большая и коричневая малая коробки"
-              width="370"
-            />
-            <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
-            <p class="text">Додаток</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio5.jpg"
+                alt="Белая большая и коричневая малая коробки"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
+              <p class="text">Додаток</p></a
+            >
           </li>
           <li>
-            <img src="./img/portfolio6.jpg" alt="Монитор Apple" width="370" />
-            <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio6.jpg"
+                alt="Монитор Apple"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="./img/portfolio7.jpg" alt="Открытый журнал" width="370" />
-            <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
-            <p class="text">Дизайн</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio7.jpg"
+                alt="Открытый журнал"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
+              <p class="text">Дизайн</p></a
+            >
           </li>
           <li>
-            <img
-              src="./img/portfolio8.jpg"
-              alt="Бирка с логотипом проекта LAB"
-              width="370"
-            />
-            <h2 class="portfolio-subtitle">Проєкт LAB</h2>
-            <p class="text">Маркетинг</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio8.jpg"
+                alt="Бирка с логотипом проекта LAB"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Проєкт LAB</h2>
+              <p class="text">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img
-              src="./img/portfolio9.jpg"
-              alt="Человек печатает на ноутбуке"
-              width="370"
-            />
-            <h2 class="portfolio-subtitle">Growing Business</h2>
-            <p class="text">Додаток</p>
+            <a href="" class="link"
+              ><img
+                src="./img/portfolio9.jpg"
+                alt="Человек печатает на ноутбуке"
+                width="370"
+              />
+              <h2 class="portfolio-subtitle">Growing Business</h2>
+              <p class="text">Додаток</p></a
+            >
           </li>
         </ul>
       </section>
